Fix css visibility property.

--- a/index.styl
+++ b/index.styl
@@ -95,7 +95,7 @@ C = '.d-grouped-barchart'
     border-radius 2px
     border: 1px solid #d3d3d3
     box-shadow 0px 1px 5px rgba(0, 0, 0, .15)
-    visibility visibility
+    visibility visible
     opacity 1
     transition .2s
     padding 15px 30px
